--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     // Étape 1 : configurer ton module
     const vFormModule = new YouverifySDK.vForm({
       vFormId: "690116f91231c6f9242d67f7",  
-      publicMerchantKey: "serigne.seck@bbsmastergroup.com",  
+      publicMerchantKey: "68e9989ac4565b91106f066c",  
       sandboxEnvironment: false,
       personalInformation: {
         firstName: "Pape",
